Adds styling throughout the webpage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 #quiz, #inputScore, #highScores {
     display: none;
 }
+
+.jumbotron {
+    background-color: white;
+}
+
+#quiz {
+    width: 80%;
+}
