Checks if initials input is empty

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
+#welcome, #quiz, #inputScore, #highScores {
+    width: 70%;
+}
+
 #quiz, #inputScore, #highScores {
     display: none;
-    width: 70%;
 }
 
 .jumbotron {
